# TBOX

./: .gitignore  LICENSE  README.md  bash_tbox  pyproject.toml
examples/: plot_fancy_frame.ipynb  plot_gradient_arrow.ipynb
tbox/: __init__.py  plot_utils.py  stat_basics.py
tests/: test_plot_utils.py  test_stat_basics.py
