[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tbox"
version = "0.1.0"
description = "Small plotting and statistics utilities for scientific Python workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Thomas Couppey", email = "thomas.couppey.s@gmail.com" },
]
keywords = ["matplotlib", "numpy", "plotting", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "typing-extensions>=4.5",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.5",
]
examples = [
    "ipykernel",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/thomascouppey/tbox"
Repository = "https://github.com/thomascouppey/tbox"
Issues = "https://github.com/thomascouppey/tbox/issues"

[tool.hatch.build.targets.wheel]
packages = ["tbox"]

[tool.ruff]
line-length = 88
target-version = "py310"

